# OdeAudio

./: .gitignore  README.md  project.toml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
ODEAudio/: integrator.py  main.py  perf_solvers.py  root.py
ODEAudio/app/: MathAudioApp.py  keyboard.py  mathaudio.kv
ODEAudio/audio/: play_one.py  play_stream.py
ODEAudio/image/: background.py
ODEAudio/odes/: equation.py  gen_sequence.py  julia_solver.py
ODEAudio/utility/: buffer.py  lerps.py  pop_filter.py  trace.py
notebooks/: guides.ipynb  popfilter_dev.ipynb
src/: equation.py
src/audio/: play_one.py  play_stream.py
src/odes/: gen_sequence.py
tests/: test_buffer.py
