[metadata]
name = ODEAudio
version = 0.0.1
author = Nelis Drost
author_email=nelis.drost@auckland.ac.nz
readme = README.md
classifiers =
    Programming Language :: Python :: 3,
    Operating System :: OS Independent,

[options]
packages = ODEAudio
python_requires = >=3.7
install_requires =
    Kivy
    numpy
    scipy
    sounddevice

[options.entry_points]
console_scripts =
    ODEAudio = ODEAudio.main:run